--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#time {
+    float: right;
+}
+
 #wrapper {
     position: absolute;
     left: 30%;
@@ -9,8 +13,18 @@
 
 #startBtn {
     background-color: purple;
-    margin-left: 33%;
+    margin-left: 40%;
+    margin-top: 50px;
     padding: 15px 32px;
     font-size: 20px;
     color: white;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+p {
+    text-align: center;
 }
