--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#time {
-    float: right;
-}
-
 #wrapper {
     position: absolute;
     left: 30%;
@@ -10,21 +6,10 @@
     height: 500px;
     border: 1px solid purple;
 }
-
-#startBtn {
+#startTime {
     background-color: purple;
-    margin-left: 40%;
-    margin-top: 50px;
+    margin-left: 33%;
     padding: 15px 32px;
     font-size: 20px;
     color: white;
-}
-
-h1 {
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-p {
-    text-align: center;
 }
