--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 #wrapper {
-    position: absolute;
+    order: 1px solid red;
     left: 30%;
     top: 20%;
-    width: 500px;
     height: 500px;
-    border: 1px solid purple;
+    width: 500px;
+    position: absolute;
 }
 #startTime {
-    background-color: purple;
+    background-color: red;
+    color: white;
+    font-size: 20px;
     margin-left: 33%;
     padding: 15px 32px;
-    font-size: 20px;
-    color: white;
 }
